# Socketley

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  install.sh  premake5.lua
.github/workflows/: ci.yml  release.yml
docs/: index.html  lua-api.html
docs/css/: style.css
docs/js/: app.js
docs/pages/: addons.html  examples-sdk-cross.html  examples-sdk.html  examples.html  lua.html  sdk-cross.html  sdk.html  socketley.html
examples/: README.md
examples/advanced/: README.md  blitz-handler.lua  development-env.lua  game-routing.lua  high-availability.lua  microservices.lua  stats-monitoring.sh
examples/basic/: README.md
examples/cache/: README.md  basic-cache.sh  cache-integration.lua  persistent-cache.sh
examples/cluster/: 01-local-cluster.sh  docker-compose.yml
examples/lua-config/: README.md  callbacks-connect.lua  callbacks.lua  custom-routing.lua
examples/managed/: 01-add-and-run.sh  02-auto-restart.sh  03-stop-start-cycle.sh  04-managed-chat.sh  05-managed-counter.sh  README.md  chat-server.cpp  counter-server.cpp  echo-service.cpp
examples/proxy/: README.md  group-discovery.sh  http-proxy.sh  load-balancer.sh
examples/server/: auth-ip-allowlist.lua  auth-token.lua  http-dashboard.lua  upstream-hub.lua  websocket-session.lua
examples/server-client/: README.md  broadcast.sh  echo-server.sh
examples/server/http-dashboard/: index.html  style.css
include/darwin/socketley/: ws_client.h
include/linux/: cache.h  client.h  daemon_client.h  event_loop.h  platform.h  proxy.h  runtime.h  server.h  socketley.h  types.h
include/linux/socketley/: attach.h  cache.h  client.h  control.h  core.h  proxy.h  server.h
include/windows/socketley/: cache_client.h
man/: README.md  socketley-help.sh  socketley.1
packaging/: build-deb.sh  install.sh  socketley.service  uninstall.sh
runtime_cache/: build.lua
runtime_client/: build.lua
runtime_proxy/: build.lua
runtime_server/: build.lua
sdk/: CMakeLists.txt
sdk/examples/: daemon_control.cpp  standalone_server.cpp  standalone_server_lua.cpp
sdk/examples/advanced/: chat_server.cpp  heartbeat_server.cpp  http_file_server.cpp  reconnecting_client.cpp  tls_server.cpp
sdk/examples/basic/: client.cpp  daemon_control.cpp  echo_server.cpp  echo_server_lua.cpp  redis_cache.cpp  tcp_proxy.cpp
socketley/: build.lua  main.cpp
socketley/cli/: arg_parser.h  cli.cpp  cli.h  cli_cluster.cpp  cli_config.cpp  cli_daemon.cpp  cli_state.cpp  command_hashing.h  ipc_client.cpp  ipc_client.h  runtime_type_parser.h
socketley/daemon/: daemon.cpp  daemon.h  daemon_handler.cpp  daemon_handler.h  dashboard_html.h  flag_handlers.cpp  flag_handlers.h  metrics_endpoint.cpp  metrics_endpoint.h
socketley/examples/: README.md  benchmark.lua
socketley/examples/advanced/: README.md  daemon-config.lua  development-env.lua  game-routing.lua  high-availability.lua  logging-pipeline.lua  microservices.lua  rapid-handler.lua
socketley/examples/basic/: 01-hello-server.sh  02-hello-client.sh  03-combined.sh  04-bash-output.sh  README.md
socketley/examples/cache/: cache-datastructures.sh  cache-integration.lua  cache-modes.sh  db-backend.lua  pubsub.sh  replication.sh  resp-mode.sh
socketley/examples/cluster/: 01-local-cluster.sh  docker-compose.yml
socketley/examples/lua-config/: README.md  callbacks-connect.lua  callbacks.lua  custom-routing.lua  full-setup.lua  simple-config.lua
socketley/examples/proxy/: README.md  multi-backend.lua  runtime-name-backend.sh  tcp-proxy.sh
socketley/examples/server/: rate-limit.lua  redis-session.lua  service-discovery.lua  session-ids.lua
socketley/examples/server-client/: README.md  bidirectional.sh  broadcast.sh  modes.sh
socketley/examples/udp/: udp-echo.sh
socketley/man/: README.md  socketley-help.sh  socketley.1
socketley/runtime/cache/: cache_instance.cpp  cache_instance.h  cache_store.cpp  cache_store.h  resp_parser.h
socketley/runtime/client/: client_instance.cpp  client_instance.h
socketley/runtime/proxy/: proxy_instance.cpp  proxy_instance.h
socketley/runtime/server/: server_instance.cpp  server_instance.h
socketley/shared/: cluster_discovery.cpp  cluster_discovery.h  daemon_client.cpp  daemon_client.h  event_loop.cpp  event_loop.h  event_loop_definitions.h  id_generator.h  logging.h  lua_context.cpp  lua_context.h  name_resolver.h  paths.cpp  paths.h  runtime_definitions.h  runtime_factory.cpp  runtime_factory.h  runtime_instance.cpp  runtime_instance.h  runtime_manager.cpp  runtime_manager.h  scoped_fd.h  state_persistence.cpp  state_persistence.h  time_format.h  tls_context.cpp  tls_context.h  ws_protocol.h
test/: run_all.sh
test/benchmark/: bench.c  bench_cache.sh  bench_cache_resp.sh  bench_cache_vs_redis  bench_cache_vs_redis.c  bench_client  bench_client.c  bench_k6_http.sh  bench_k6_ws.sh  bench_proxy.sh  bench_server.sh  bench_websocket.sh  run_all.sh  utils.sh  visualize.py
test/benchmark/k6/: http_bench.js  ws_bench.js
test/benchmark/k6/http-root/: data.json  index.html  style.css
test/benchmark/results/: cache_20260206_150933.json  proxy_20260206_151059.json  server_20260206_150916.json  server_20260206_152628.json  summary_20260206_150916.md
test/docker/: docker-compose.cluster.yml  test_cluster_docker.sh
test/integration/: test_basic.sh  test_cache.sh  test_cache_access.sh  test_client.sh  test_cluster.sh  test_cluster_lua.sh  test_dashboard.sh  test_error_cases.sh  test_http_worker.sh  test_lua_callbacks.sh  test_master_mode.sh  test_proxy_routing.sh  test_pubsub.sh  test_rate_limit.sh  test_resp.sh  test_service_mesh.sh  test_state_persistence.sh  test_stats.sh  test_udp.sh  test_websocket.sh
test/unit/: test_cache_store.cpp  test_command_hashing.cpp  test_managed_runtime.cpp  test_name_resolver.cpp  test_resp_parser.cpp  test_sdk_cache_client.cpp  test_sdk_control.cpp  test_sdk_engine.cpp  test_sdk_ws_client.cpp  test_single_header.cpp  test_single_header_lua.cpp  test_ws_parser.cpp
tools/: amalgamate.sh
